--- a/faq.html
+++ b/faq.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ-Festival</title>
-    <link rel="stylesheet" type="text/css" href="style(faq).css"/>
+    <link rel="stylesheet" type="text/css href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style-faq.css"/>
 </head>
 <body>
 <header>
 
 <div>
-    <img src="../images/people-at-concert.jpg" alt="image-concert">
+    <img src="/images/people-at-concert.jpg" alt="image-concert">
 </div>
 </header>
 <main>
