experimentation with timeline div to create a date stamp across from the artist block

--- a/timeline.html
+++ b/timeline.html
@@ -26,6 +26,9 @@
         <div>
           <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
         </div>
+        <div>
+            <p>Vendredi 29 Juillet - 18h00</p>
+        </div>
       </li>
       <li>
         <div>
