--- a/faq.html
+++ b/faq.html
@@ -124,15 +124,18 @@
             </button>
             <p>Toute la resaturation du festival est assurée par les équipes bénévoles .</p>
         </div>
-
-
-
-
-
-
         
     </div>
 </section>
+<section>
+<span>Vous n'avez pas obtenu les réponses à vos questions ?</span>
+<div>
+<h2>Contactez-nous</h2>
+</div>
+
+</section>
+
+
 
 <!-- external js-->
 <script src="script-faq.js"></script>
