added the home navbar to timeline

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -40,10 +39,10 @@
           </div>
           <div id="menu">
           <ul>
-            <li><a href="#workshop">LINE UP</a></li>
-            <li><a href="#workshop">BUY</a></li>
-            <li><a href="#workshop">FAQ</a></li>
-            <li><a href="#workshop">CONTACT</a></li>
+            <li><a href="./timeline.html">LINE UP</a></li>
+            <li><a href="./billet.html">BUY</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
           </div>
         </nav>
