--- a/timeline.html
+++ b/timeline.html
@@ -10,6 +10,25 @@
 </head>
 <body>
     <main>
+      <header>
+        <nav>
+          <div id="logo">
+          <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo"/></a>
+          </div>  
+          <div id="burger-menu">
+            <span></span>
+          </div>
+          <div id="menu">
+          <ul>
+            <li><a href="./timeline.html">LINE UP</a></li>
+            <li><a href="./billet.html">BUY</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
+          </ul>
+          </div>
+        </nav>
+
+      </header>
         <section class="timeline-header">
             <h1>Programme du festival</h1>
             <h2>Donnez nous un maximum de pognon</h2>
