ajout des fichiers billet

--- a/billet.html
+++ b/billet.html
@@ -1,12 +1,165 @@
-<!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="billet.css">
+
 </head>
+
 <body>
-    
+
+
+    <ul class="pricing_table">
+        <li class="price_block">
+            <h3>Basic</h3>
+            <div class="price">
+                <div class="price_figure">
+                    <span class="price_number">50€</span>
+                </div>
+            </div>
+            <ul class="features">
+                <li>Billets</li>
+                <li>-</li>
+                <li>-</li>
+                <li>-</li>
+            </ul>
+            <div class="footer">
+                <a href="#" class="action_button">Achetez</a>
+            </div>
+        </li>
+        <li class="price_block">
+            <h3>Medium</h3>
+            <div class="price">
+                <div class="price_figure">
+                    <span class="price_number">100€</span>
+
+                </div>
+            </div>
+            <ul class="features">
+                <li>Billets</li>
+                <li>Boisson</li>
+                <li>-</li>
+                <li>-</li>
+            </ul>
+            <div class="footer">
+                <a href="#" class="action_button">Achetez</a>
+            </div>
+        </li>
+        <li class="price_block">
+            <h3>Premium</h3>
+            <div class="price">
+                <div class="price_figure">
+                    <span class="price_number">200€</span>
+
+                </div>
+            </div>
+            <ul class="features">
+                <li>Billets</li>
+                <li>Boisson</li>
+                <li>Repas</li>
+                <li>-</li>
+            </ul>
+            <div class="footer">
+                <a href="#" class="action_button">Achetez</a>
+            </div>
+        </li>
+        <li class="price_block">
+            <h3>VIP</h3>
+            <div class="price">
+                <div class="price_figure">
+                    <span class="price_number">400€</span>
+                </div>
+            </div>
+            <ul class="features">
+                <li>Billets</li>
+                <li>Boisson</li>
+                <li>Repas</li>
+                <li>Hôtel</li>
+            </ul>
+            <div class="footer">
+                <a href="#" class="action_button">Achetez</a>
+            </div>
+        </li>
+    </ul>
+
+
+    <ul class="skeleton pricing_table" style="margin-top: 100px; overflow: hidden;">
+        <li class="label" style="margin: 0 none;">ul.pricing_table</li>
+        <li class="price_block">
+            <span class="label">li.price_block</span>
+            <h3><span class="label">h3</span></h3>
+            <div class="price">
+                <span class="label">div.price</span>
+                <div class="price_figure">
+                    <span class="label">div.price_figure</span>
+                    <span class="price_number">
+                        <span class="label">span.price_number</span>
+                    </span>
+                    <span class="price_tenure">
+                        <span class="label">span.price_tenure</span>
+                    </span>
+                </div>
+            </div>
+            <ul class="features">
+                <li class="label">ul.features</li>
+                <br /><br /><br />
+            </ul>
+            <div class="footer">
+                <span class="label">div.footer</span>
+            </div>
+        </li>
+
+
+        <li class="price_block" style="opacity: 0.5;">
+            <span class="label">li.price_block</span>
+            <h3><span class="label">h3</span></h3>
+            <div class="price">
+                <span class="label">div.price</span>
+                <div class="price_figure">
+                    <span class="label">div.price_figure</span>
+                    <span class="price_number">
+                        <span class="label">span.price_number</span>
+                    </span>
+                    <span class="price_tenure">
+                        <span class="label">span.price_tenure</span>
+                    </span>
+                </div>
+            </div>
+            <ul class="features">
+                <li class="label">ul.features</li>
+                <br /><br /><br />
+            </ul>
+            <div class="footer">
+                <span class="label">div.footer</span>
+            </div>
+        </li>
+        <li class="price_block" style="opacity: 0.25;">
+            <span class="label">li.price_block</span>
+            <h3><span class="label">h3</span></h3>
+            <div class="price">
+                <span class="label">div.price</span>
+                <div class="price_figure">
+                    <span class="label">div.price_figure</span>
+                    <span class="price_number">
+                        <span class="label">span.price_number</span>
+                    </span>
+                    <span class="price_tenure">
+                        <span class="label">span.price_tenure</span>
+                    </span>
+                </div>
+            </div>
+            <ul class="features">
+                <li class="label">ul.features</li>
+                <br /><br /><br />
+            </ul>
+            <div class="footer">
+                <span class="label">div.footer</span>
+            </div>
+        </li>
+    </ul>
 </body>
+
 </html>
