--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Questions fréquentes</title>
+    <link href="style.css" rel="stylesheet">
+
     <!-- fontawasome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- google font -->
@@ -16,6 +18,25 @@
 <body>
 
 <section>
+<header>
+    <nav>
+        <div id="logo">
+        <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo"/></a>
+        </div>  
+        <div id="burger-menu">
+          <span></span>
+        </div>
+        <div id="menu">
+        <ul>
+          <li><a href="./timeline.html">LINE UP</a></li>
+          <li><a href="./billet.html">BUY</a></li>
+          <li><a href="./faq.html">FAQ</a></li>
+          <li><a href="./contact.html">CONTACT</a></li>
+        </ul>
+        </div>
+      </nav>
+</header>
+
     <h1 class="title">FAQ</h1>
       
     <div class="title2">
