--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="the best festival ever" />
     <title>WILD WILD FEST</title>
     <!-- <link href="mobile_screen.css" rel="stylesheet" type="text/css"> -->
+    <link href="style.css" rel="stylesheet">
     <link href="index-mobile_screen.css" rel="stylesheet" media="screen and (max-width: 390px)"/>
     <link href="index-large_screen.css" rel="stylesheet" media="screen and (min-width: 392px)"/>
     <script defer src="index.js"></script>
