--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div id="logo">
+            <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo"/></a>
+            </div>  
+            <div id="burger-menu">
+              <span></span>
+            </div>
+            <div id="menu">
+            <ul>
+              <li><a href="./timeline.html">LINE UP</a></li>
+              <li><a href="./billet.html">BUY</a></li>
+              <li><a href="./faq.html">FAQ</a></li>
+              <li><a href="./contact.html">CONTACT</a></li>
+            </ul>
+            </div>
+          </nav>
+    </header>
 </body>
 </html>
