--- a/timeline.html
+++ b/timeline.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-
-=======
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -48,9 +45,10 @@
         <div>
           <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
         </div>
-        <div>
+<!--        <div>
             <p>Vendredi 29 Juillet - 18h00</p>
         </div>
+      -->
       </li>
       <li>
         <div>
