--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -40,9 +39,9 @@
           </div>
           <div id="menu">
           <ul>
-            <li><a href="#workshop">LINE UP</a></li>
-            <li><a href="#workshop">BUY</a></li>
-            <li><a href="#workshop">FAQ</a></li>
+            <li><a href="timeline.html">LINE UP</a></li>
+            <li><a href="billet.html">BUY</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="#workshop">CONTACT</a></li>
           </ul>
           </div>
@@ -60,7 +59,7 @@
 
   <main>
 
-    <!-- Big Title -->
+    <!-- BIG TITLE -->
 
     <section>
 
@@ -77,9 +76,9 @@
 
     <!-- COUNTDOWN + CALL tO ACTION-->
 
-      <section>
+      <section id="countdown-cta">
 
-        <h2>Allmost Sold Out</h2>
+        <h2>Save the <span>&nbsp;date</span></h2>
         <div class="countdown">
           <div class="container-day">
             <p classs="day">Time</p>
