--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="the best festival ever" />
     <title>WILD WILD FEST</title>
-    <!-- <link href="mobile_screen.css" rel="stylesheet" type="text/css"> -->
-    <link href="style.css" rel="stylesheet">
     <link href="index-mobile_screen.css" rel="stylesheet" media="screen and (max-width: 390px)"/>
     <link href="index-large_screen.css" rel="stylesheet" media="screen and (min-width: 392px)"/>
     <script defer src="index.js"></script>
@@ -33,7 +31,8 @@
 
         <nav>
           <div id="logo">
-          <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo"/></a>
+            <p id="logotext">WILD WILD FEST</p>
+          <!-- <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo" type="image/svg+xml"/></a> -->
           </div>  
           <div id="burger-menu">
             <span></span>
@@ -88,10 +87,10 @@
           <div class="container-hour">
             <p classs="hour">Time</p>
             <p>Hour</p>
+          </div>
           <div class="container-minute">
             <p classs="minute">Time</p>
             <p>Second</p>
-          </div>
           </div>
         </div>
 
@@ -100,6 +99,22 @@
     <!-- Slider -->
 
       <section></section>
+
+    <!-- Prix comme sur  -->
+
+    <section></section>
+    
+    <!-- Partenaire slider -->
+
+      <section></section>
+
+    <!-- Claquette partnership -->
+
+    <section></section>
+
+    <!-- Newletter ou contact -->
+
+    <section></section>
 
   </main>
 
