--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="the best festival ever" />
     <title>WILD WILD FEST</title>
-    <link href="index-mobile_screen.css" rel="stylesheet" media="screen and (max-width: 390px)"/>
-    <link href="index-large_screen.css" rel="stylesheet" media="screen and (min-width: 392px)"/>
+    <link href="index-mobile_screen.css" rel="stylesheet" media="screen and (max-width: 900px)"/>
+    <link href="index-large_screen.css" rel="stylesheet" media="screen and (min-width: 900px)"/>
     <script defer src="index.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
   </head>
 
   <body>
+
+  <!-- Favicon hard rocker -->
+
+  <!-- CTA button sur la video home -->
 
   <!-- Cursor -->
 
@@ -32,7 +36,6 @@
         <nav>
           <div id="logo">
             <p id="logotext">WILD WILD FEST</p>
-          <!-- <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo" type="image/svg+xml"/></a> -->
           </div>  
           <div id="burger-menu">
             <span></span>
@@ -47,7 +50,11 @@
           </div>
         </nav>
 
-        <p class="baseline" >WE ARE<br><span>READY.</span></p>
+        <div class="content">
+          <p class="date" >26/10/2022</span></p>
+          <p class="baseline" >BUY<span>&nbsp;NOW</span></p>
+          <button class="btn">TICKET ONLINE</button>
+        </div>
         <p class="more" >MORE</span></p>
         <div class="arrow">
           <div class="scroll-down"></div>
@@ -70,6 +77,12 @@
       <h1>WILD WILD FEST</h1>
     </div>
 
+    <div class="festivaldescription">
+      <p>The transgeration & transcultural festival</p>
+    </div>
+
+    <div class="divider"></div>
+
     </section>
   
     <!--Images + text -->
@@ -78,19 +91,23 @@
 
       <section id="countdown-cta">
 
-        <h2>Save the <span>&nbsp;date</span></h2>
+        <h2>Get your ticket<span>&nbsp;Now</span></h2>
         <div class="countdown">
-          <div class="container-day">
-            <p classs="day">Time</p>
+          <div class="container-day"> 
+            <p class="day">Time</p>
             <p>Day</p>
           </div>
           <div class="container-hour">
-            <p classs="hour">Time</p>
+            <p class="hour">Time</p>
             <p>Hour</p>
           </div>
           <div class="container-minute">
-            <p classs="minute">Time</p>
-            <p>Second</p>
+            <p class="min">Time</p>
+            <p>Min</p>
+          </div>
+          <div class="container-second">
+            <p class="sec">Time</p>
+            <p>Sec</p>
           </div>
         </div>
 
@@ -100,7 +117,7 @@
 
       <section></section>
 
-    <!-- Prix comme sur  -->
+    <!-- Prix comme sur https://www.lifeaz.co/landing-page/particuliers -->
 
     <section></section>
     
@@ -108,7 +125,7 @@
 
       <section></section>
 
-    <!-- Claquette partnership -->
+    <!-- Claquette partnership comme effet nike -->
 
     <section></section>
 
@@ -116,8 +133,17 @@
 
     <section></section>
 
+
+    <section></section>
+
+    <!-- Système onglet Js https://www.youtube.com/watch?v=wKatvNTAPVA -->
+
+    <section></section>
+
   </main>
 
     <footer></footer>
+
+    
   </body>
 </html>
