--- a/faq.html
+++ b/faq.html
@@ -157,6 +157,24 @@
 
     </div>
 </section>
+<footer>
+    <div class="footer__container">
+        <div id="footer__logo">
+          <p id="footer__logotext">WILD WILD FEST</p>
+        </div>
+        <div id="footer__adress">
+          <p>4 rue Alphonse Penaud</p>
+          </br>
+          <p>75018 PARIS</p>
+        </div>
+        <ul id="footer__social">
+          <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
+          <li><a href="#"></a><ion-icon name="logo-instagram"></ion-icon></li>
+          <li><a href="#"></a><ion-icon name="logo-snapchat"></ion-icon></li>
+        </ul>
+      </div>
+
+</footer>
 
 
 <!-- external js-->
