added main logo to timeline, still buggy

--- a/timeline.html
+++ b/timeline.html
@@ -13,8 +13,10 @@
       <header>
         <nav>
           <div id="logo">
-          <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo"/></a>
-          </div>  
+            <a href="./index.html">
+              <p id="logo__header">WILD WILD FEST</p>
+            </a>
+          </div> 
           <div id="burger-menu">
             <span></span>
           </div>
