--- a/timeline.html
+++ b/timeline.html
@@ -117,7 +117,7 @@
       <img width="24" height="24" src="https://assets.codepen.io/162656/george-martsoukos-small-logo.svg" alt="George Martsoukos logo">
     </a>
   </footer>
-<script src="script.js"></script>
+<script src="timeline.js"></script>
     </main>
 </body>
 </html>
