--- a/faq.html
+++ b/faq.html
@@ -152,9 +152,11 @@
 
         <div>
         <span class="contact1">Vous n'avez pas obtenu les réponses à vos questions ?</span>
-        <button type="button" class="contact2" onclick="window.location.href='contact.html'">Contactez-nous</button>
-        
         </div>
+        <div>
+        <button type="button" class="contact2" onclick="window.location.href='contact.html'">Contactez-nous</button>
+        </div>
+      
 
     </div>
 </section>
