adding image to timeline, it doesnt work yet

--- a/timeline.html
+++ b/timeline.html
@@ -37,7 +37,7 @@
         <div class="card">
           <img src="./assets/images/Artists/elvis.jpeg" alt="portrait of Elvis Presley" class="artist-img">
           <h2 class="artist-name">Elvis Presley</h2>
-          <h3 class="artist-time">1934</h3> 
+          <h3 class="artist-time">Mer. 26 Octobre 2022 - 21h30</h3> 
           <p class="artist-description">vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
         </div>
       </li>
