--- a/billet.html
+++ b/billet.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" rel="stylesheet">
-
     <link rel="stylesheet" href="billet.css">
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
 <header>
     <nav>
         <div id="logo">
-        <a href="index.html"><img class="logo" src="/assets/images/logo.svg" alt="logo"/></a>
-        </div>  
+            <p id="logo__header"><a href="index.html">WILD WILD FEST</a></p>
+          </div> 
         <div id="burger-menu">
           <span></span>
         </div>
@@ -45,7 +45,7 @@
                 <li>-</li>
                 <li>-</li>
             </ul>
-            <div class="footer">
+            <div class="footer_tab">
                 <a href="#" class="action_button">Achetez</a>
             </div>
         </li>
@@ -63,7 +63,7 @@
                 <li>-</li>
                 <li>-</li>
             </ul>
-            <div class="footer">
+            <div class="footer_tab">
                 <a href="#" class="action_button">Achetez</a>
             </div>
         </li>
@@ -81,7 +81,7 @@
                 <li>Repas</li>
                 <li>-</li>
             </ul>
-            <div class="footer">
+            <div class="footer_tab">
                 <a href="#" class="action_button">Achetez</a>
             </div>
         </li>
@@ -98,7 +98,7 @@
                 <li>Repas</li>
                 <li>Hôtel</li>
             </ul>
-            <div class="footer">
+            <div class="footer_tab">
                 <a href="#" class="action_button">Achetez</a>
             </div>
         </li>
@@ -126,8 +126,8 @@
                 <li class="label">ul.features</li>
                 <br /><br /><br />
             </ul>
-            <div class="footer">
-                <span class="label">div.footer</span>
+            <div class="footer_tab">
+                <span class="label">div.footer_tab</span>
             </div>
         </li>
 
@@ -151,8 +151,8 @@
                 <li class="label">ul.features</li>
                 <br /><br /><br />
             </ul>
-            <div class="footer">
-                <span class="label">div.footer</span>
+            <div class="footer_tab">
+                <span class="label">div.footer_tab</span>
             </div>
         </li>
         <li class="price_block" style="opacity: 0.25;">
@@ -174,11 +174,31 @@
                 <li class="label">ul.features</li>
                 <br /><br /><br />
             </ul>
-            <div class="footer">
-                <span class="label">div.footer</span>
-            </div>
+
         </li>
     </ul>
+
+                  <!-- FOOTER -->
+
+                  <footer>
+                    <div class="footer__container">
+                    <div id="footer__logo">
+                        <p id="footer__logotext">WILD WILD FEST</p>
+                    </div>
+                    <div id="footer__adress">
+                        <p>4 rue Alphonse Penaud</p>
+                        </br>
+                        <p>75018 PARIS</p>
+                    </div>
+                    <ul id="footer__social">
+                        <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
+                        <li><a href="#"></a><ion-icon name="logo-instagram"></ion-icon></li>
+                        <li><a href="#"></a><ion-icon name="logo-snapchat"></ion-icon></li>
+                    </ul>
+                    </div>
+                </footer>
+
+            
 </body>
 
 </html>
