--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="contact.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Document</title>
 </head>
 <body>
+
+  <!-- HEADER -->
+
     <header>
         <nav>
             <div id="logo">
@@ -27,5 +32,67 @@
             </div>
           </nav>
     </header>
+
+  <!-- CONTACT FORM -->
+
+  <div class="container">
+    <div class="row">
+        <h1>contact us</h1>
+    </div>
+    <div class="row">
+        <h4 style="text-align:center">We'd love to hear from you!</h4>
+    </div>
+    <div class="row input-container">
+        <div class="col-xs-12">
+          <div class="styled-input wide">
+            <input type="text" required />
+            <label>Name</label> 
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <div class="styled-input">
+            <input type="text" required />
+            <label>Email</label> 
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <div class="styled-input" style="float:right;">
+            <input type="text" required />
+            <label>Phone Number</label> 
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="styled-input wide">
+            <textarea required></textarea>
+            <label>Message</label>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="btn-lrg submit-btn">Send Message</div>
+        </div>
+    </div>
+  </div>
+  
+
+  <!-- FOOTER -->
+
+  <footer>
+    <div class="footer__container">
+      <div id="footer__logo">
+        <p id="footer__logotext">WILD WILD FEST</p>
+      </div>
+      <div id="footer__adress">
+        <p>4 rue Alphonse Penaud</p>
+        </br>
+        <p>75018 PARIS</p>
+      </div>
+      <ul id="footer__social">
+        <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
+        <li><a href="#"></a><ion-icon name="logo-instagram"></ion-icon></li>
+        <li><a href="#"></a><ion-icon name="logo-snapchat"></ion-icon></li>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 </html>
