--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     <!-- fontawasome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- google font -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https:https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet href="style.css"/>
     <link rel="stylesheet" href="style-faq.css"/>
