trying to build a flex display of artits

--- a/timeline.html
+++ b/timeline.html
@@ -36,8 +36,10 @@
       <li>
         <div class="card">
           <img src="./assets/images/Artists/elvis.jpeg" alt="portrait of Elvis Presley" class="artist-img">
-          <h2 class="artist-name">Elvis Presley</h2>
-          <h3 class="artist-time">Mer. 26 Octobre 2022 - 21h30</h3> 
+          <div class="artist">
+            <h2 class="artist-name">Elvis Presley</h2>
+            <h3 class="artist-time">Mer. 26 Octobre 2022 - 21h30</h3> 
+          </div>
           <p class="artist-description">vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
         </div>
       </li>
@@ -63,7 +65,8 @@
       </ul>
     </div>
   </footer>
-<script src="timeline.js"></script>
     </main>
 </body>
+<script src="./create-tl-card.js"></script>
+
 </html>
