--- a/index.html
+++ b/index.html
@@ -117,23 +117,23 @@
       <div class="photo-slider">
         <div class="item">
           <span class="photo"><img src="assets/images/concert1.jpg" alt=""></span>
-          <span class="text">Ouchh</span>
+          <span class="text">Iggy Plop</span>
         </div>
         <div class="item">
           <span class="photo"><img src="assets/images/concert2.jpg" alt=""></span>
-          <span class="text">Ouchhh</span>
+          <span class="text">Slam Plop</span>
         </div>
         <div class="item">
           <span class="photo"><img src="assets/images/concert3.jpg" alt=""></span>
-          <span class="text">Ouchhh</span>
+          <span class="text">Death Plop</span>
         </div>
         <div class="item">
           <span class="photo"><img src="assets/images/concert4.jpg" alt=""></span>
-          <span class="text">Ouchhh</span>
+          <span class="text">Dj Plop</span>
         </div>
         <div class="item">
           <span class="photo"><img src="assets/images/concert5.jpg" alt=""></span>
-          <span class="text">Ouchhh</span>
+          <span class="text">Mc Plop</span>
         </div>
       </div>
     </section>
